# rust-todo-web-app

./: README.md
backend/: .env.example  Cargo.toml
backend/sql/: init.sql  reset_v2.sql
backend/src/: main.rs
backend/src/db/: mod.rs
backend/src/models/: mod.rs  reminder.rs  todo.rs
backend/src/reminders/: mod.rs
backend/src/routes/: mod.rs  reminders.rs  todos.rs
docs/: dev-log.md  report-material.md  v2-mysql-upgrade.md
frontend/: app.js  index.html  styles.css
